--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <title>BarberShop</title>
   </head>
   <body>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <header>
       <a href="index.html">
         <img src="images/LogoBarber.png" alt="Logoul Frizeriei" />
