--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
       rel="stylesheet"
     />
     <header>
-      <a href="index.html">
+      <a class="link" href="index.html">
         <img src="images/LogoBarber.png" alt="Logoul Frizeriei" />
       </a>
       <nav>
-        <ul>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Services.html">Services and prices</a></li>
-          <li><a href="Barbers.html">Barbers</a></li>
-          <li><a href="Contacts.html">Contacts</a></li>
+        <ul class="unstyled-list">
+          <li><a class="link nav-link" href="About.html">About</a></li>
+          <li>
+            <a class="link nav-link" href="Services.html"
+              >Services and prices</a
+            >
+          </li>
+          <li><a class="link nav-link" href="Barbers.html">Barbers</a></li>
+          <li><a class="link nav-link" href="Contacts.html">Contacts</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="unstyled-list">
         <li>
-          <a href="tel:+380441111111">+38 044 111 11 11</a>
+          <a class="link contact-link" href="tel:+380441111111"
+            >+38 044 111 11 11</a
+          >
         </li>
         <li>
           <button type="button">Online-booking</button>
@@ -34,7 +40,7 @@
     </header>
     <main>
       <section>
-        <h6>A hair salon for men in Kyiv</h6>
+        <h4>A hair salon for men in Kyiv</h4>
         <h1>BarberShop</h1>
         <p>
           We are experts in trendy men's haircuts. We work quickly, carefully
@@ -52,7 +58,7 @@
           src="images/BeardStyles/Style2.jpg"
           alt="Beard Style two"
         />
-        <h6>About</h6>
+        <h4>About</h4>
         <h2>Best Barbershop in your city</h2>
         <p>
           If you want to add more confidence to your image, you should
@@ -68,9 +74,9 @@
         <button type="button">Online-booking</button>
       </section>
       <section>
-        <h6>Spend your time with the best masters</h6>
+        <h4>Spend your time with the best masters</h4>
         <h2>Services and prices</h2>
-        <ul>
+        <ul class="unstyled-list">
           <li>
             <p>Men's haircut</p>
             <p>from 300 uah</p>
@@ -88,7 +94,7 @@
             <p>from 200 uah</p>
           </li>
         </ul>
-        <ul>
+        <ul class="unstyled-list">
           <li>
             <p>Trainee's haircut</p>
             <p>from 50 uah.</p>
@@ -109,7 +115,7 @@
         <button type="button">Online-booking</button>
       </section>
       <section>
-        <ul>
+        <ul class="unstyled-list">
           <li>
             <h2>600<sup>+</sup></h2>
             <p>Satisfied customers per day</p>
@@ -127,7 +133,7 @@
             <p>Gifts for regular customers</p>
           </li>
         </ul>
-        <h6>Old traditional school</h6>
+        <h4>Old traditional school</h4>
         <h2>¿Why people come to us?</h2>
         <p>
           Only good things are said about us. But it's better to see and feel 1
@@ -135,9 +141,9 @@
         </p>
       </section>
       <section>
-        <h6>For true enjoyers of the atmosphere</h6>
+        <h4>For true enjoyers of the atmosphere</h4>
         <h2>Our barbers</h2>
-        <ul>
+        <ul class="unstyled-list">
           <li>
             <img width="200" src="images/barbers/John.jpg" alt="John" />
             <h5>John Smith</h5>
@@ -156,8 +162,8 @@
         </ul>
       </section>
       <section>
-        <h6>In Latin, "barba" means "beard"</h6>
-        <ul>
+        <h4>In Latin, "barba" means "beard"</h4>
+        <ul class="unstyled-list">
           <li>
             <img
               width="200"
@@ -190,18 +196,25 @@
       </section>
       <section>
         <h2>Contacts</h2>
-        <ul>
+        <ul class="unstyled-list">
           <li>
-            <a href="https://goo.gl/maps/ZL8GriiBfxLYy5f1A" target="_blank"
+            <a
+              class="link"
+              href="https://goo.gl/maps/ZL8GriiBfxLYy5f1A"
+              target="_blank"
               >st. Vasilkovaya, 7A Kiev, 08132</a
             >
           </li>
-          <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
           <li>
-            <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+            <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+          </li>
+          <li>
+            <a class="link" href="mailto:barbershop@email.com"
+              >barbershop@email.com</a
+            >
           </li>
         </ul>
-        <h6>Working hours</h6>
+        <h4>Working hours</h4>
         <p>Every day from 9:00 to 22:00</p>
       </section>
     </main>
