Putina completare la html

--- a/index.html
+++ b/index.html
@@ -220,30 +220,47 @@
         </ul>
       </section>
       <section>
-        <h2>Contacts</h2>
-        <ul class="unstyled-list">
-          <li>
-            <a
-              class="link contact-link"
-              href="https://goo.gl/maps/ZL8GriiBfxLYy5f1A"
-              target="_blank"
-              >st. Vasilkovaya, 7A Kiev, 08132</a
-            >
-          </li>
-          <li>
-            <a class="link contact-link" href="tel:+380441111111"
-              >+38 044 111 11 11</a
-            >
-          </li>
-          <li>
-            <a class="link contact-link" href="mailto:barbershop@email.com"
-              >barbershop@email.com</a
-            >
-          </li>
-        </ul>
-        <h4>Working hours</h4>
-        <p>Every day from 9:00 to 22:00</p>
+        <div>
+          <h2>Online-booking</h2>
+          <ul>
+            <li>Name<sup>*</sup></li>
+            <li>Phone<sup>*</sup></li>
+            <li>Message</li>
+          </ul>
+          <button type="button">send</button>
+        </div>
+        <div>
+          <h2>Contacts</h2>
+          <ul class="unstyled-list">
+            <li>
+              <a
+                class="link contact-link"
+                href="https://goo.gl/maps/ZL8GriiBfxLYy5f1A"
+                target="_blank"
+                >st. Vasilkovaya, 7A Kiev, 08132</a
+              >
+            </li>
+            <li>
+              <a class="link contact-link" href="tel:+380441111111"
+                >+38 044 111 11 11</a
+              >
+            </li>
+            <li>
+              <a class="link contact-link" href="mailto:barbershop@email.com"
+                >barbershop@email.com</a
+              >
+            </li>
+          </ul>
+          <h4>Working hours</h4>
+          <p>Every day from 9:00 to 22:00</p>
+        </div>
       </section>
     </main>
+    <footer>
+      <p>&#169</p>
+      <p>Copyright 2020</p>
+      <p>Instagram</p>
+      <p>Youtube</p>
+    </footer>
   </body>
 </html>
