inca putina stilizare

--- a/index.html
+++ b/index.html
@@ -165,29 +165,30 @@
           time than read 10 times.
         </p>
       </section>
-      <section>
-        <h4>For true enjoyers of the atmosphere</h4>
-        <h2>Our barbers</h2>
+      <!-- Barbers section -->
+      <section class="barbers">
+        <h4 class="barbers-subheading">For true enjoyers of the atmosphere</h4>
+        <h2 class="barbers-title">Our barbers</h2>
         <ul class="unstyled-list">
           <li>
             <img width="200" src="images/barbers/John.jpg" alt="John" />
-            <h5>John Smith</h5>
-            <h6>Extreme Barber</h6>
+            <p class="barbers-names">John Smith</p>
+            <p class="barbers-job">Extreme Barber</p>
           </li>
           <li>
             <img width="200" src="images/barbers/Michele.jpg" alt="Michele" />
-            <h5>Michele Doe</h5>
-            <h6>Extreme Barber</h6>
+            <p class="barbers-names">Michele Doe</p>
+            <p class="barbers-job">Extreme Barber</p>
           </li>
           <li>
             <img width="200" src="images/barbers/Alan.jpg" alt="Alan" />
-            <h5>Alan Black</h5>
-            <h6>Extreme Barber</h6>
+            <p class="barbers-names">Alan Black</p>
+            <p class="barbers-job">Extreme Barber</p>
           </li>
         </ul>
       </section>
       <section>
-        <h4>In Latin, "barba" means "beard"</h4>
+        <h4 class="barbers-subheading">In Latin, "barba" means "beard"</h4>
         <ul class="unstyled-list">
           <li>
             <img
@@ -219,21 +220,23 @@
           </li>
         </ul>
       </section>
-      <section>
+      <!-- Contacts -->
+      <section class="contacts">
         <div>
-          <h2>Online-booking</h2>
+          <h2 class="contacts-title">Online-booking</h2>
           <ul>
-            <li>Name<sup>*</sup></li>
-            <li>Phone<sup>*</sup></li>
-            <li>Message</li>
+            <li class="contacts-booking-formular">Name<sup>*</sup></li>
+            <li class="contacts-booking-formular">Phone<sup>*</sup></li>
+            <li class="contacts-booking-formular">Message</li>
           </ul>
           <button type="button">send</button>
         </div>
         <div>
-          <h2>Contacts</h2>
+          <h2 class="contacts-title">Contacts</h2>
           <ul class="unstyled-list">
             <li>
               <a
+                class="contacts-link"
                 class="link contact-link"
                 href="https://goo.gl/maps/ZL8GriiBfxLYy5f1A"
                 target="_blank"
@@ -241,26 +244,26 @@
               >
             </li>
             <li>
-              <a class="link contact-link" href="tel:+380441111111"
+              <a class="contacts-link" class="link contact-link" href="tel:+380441111111"
                 >+38 044 111 11 11</a
               >
             </li>
             <li>
-              <a class="link contact-link" href="mailto:barbershop@email.com"
+              <a class="contacts-link" class="link contact-link" href="mailto:barbershop@email.com"
                 >barbershop@email.com</a
               >
             </li>
           </ul>
-          <h4>Working hours</h4>
-          <p>Every day from 9:00 to 22:00</p>
+          <h4 class="contacts-subtitle" >Working hours</h4>
+          <p class="contacts-text">Every day from 9:00 to 22:00</p>
         </div>
       </section>
     </main>
-    <footer>
-      <p>&#169</p>
-      <p>Copyright 2020</p>
-      <p>Instagram</p>
-      <p>Youtube</p>
+    <!-- Footer Page -->
+    <footer class="footer-page">
+      <p class="footer-copyright">&#169 Copyright 2020</p>
+      <p class="footer-social-media">Instagram</p>
+      <p class="footer-social-media">Youtube</p>
     </footer>
   </body>
 </html>
