--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <a class="link" href="index.html">
           <img src="images/LogoBarber.png" alt="Logoul Frizeriei" />
         </a>
-        <a class="social-media-link link" href="https://www.youtube.com/@DorianPopaHatz" target="_blank">Youtube</a>
-        <a class="social-media-link link" href="https://www.instagram.com/eusuntdorian/" target="_blank">Instagram</a>
+        <div class="social-media">
+          <a class="social-media-link link" href="https://www.youtube.com/@DorianPopaHatz" target="_blank">Youtube</a>
+          <a class="social-media-link link" href="https://www.instagram.com/eusuntdorian/" target="_blank">Instagram</a>
+        </div>
       </div>
       <div class="hero-header-section">
         <div class="principal-navigation">
@@ -62,120 +64,120 @@
     </header>
     <main>
       <!-- About Section -->
-      <section>
+      <section class="about-section-container">
         <img
-          width="300"
+          width="270"
           src="images/BeardStyles/Style1.jpg"
           alt="Beard Style one"
         />
         <img
-          width="300"
+          width="270"
           src="images/BeardStyles/Style2.jpg"
           alt="Beard Style two"
         />
-        <h4>About</h4>
-        <h2>Best Barbershop in your city</h2>
-        <p>
-          If you want to add more confidence to your image, you should
-          definitely visit us.
-        </p>
-        <p>
-          We are a team that never stops at what has been achieved and are
-          thirsty for changes. And when you fall into the hands of our master,
-          you will never be the same again. We are a team that is always "on the
-          same wave" with clients. Therefore, we are always ready to improve
-          everyone who comes to us!
-        </p>
-        <button type="button">Online-booking</button>
+        <div class="about-text-container">
+          <h4 class="subtitle">About</h4>
+          <h2 class="title">Best Barbershop in your city</h2>
+          <p class="text">
+            If you want to add more confidence to your image, you should
+            definitely visit us.
+          </p>
+          <p class="about-paragraph">
+            We are a team that never stops at what has been achieved and are
+            thirsty for changes. And when you fall into the hands of our master,
+            you will never be the same again. We are a team that is always "on the
+            same wave" with clients. Therefore, we are always ready to improve
+            everyone who comes to us!
+          </p>
+          <button class="button-nav" type="button">Online-booking</button>
+        </div>
       </section>
       <!-- Services section -->
-      <section>
-        <h4>Spend your time with the best masters</h4>
-        <h2>Services and prices</h2>
-        <div>
-          <ul class="unstyled-list">
-            <li>
-              <p>Men's haircut</p>
-              <p>from 300 uah</p>
-            </li>
-            <li>
-              <p>Beard trim</p>
-              <p>from 300 uah</p>
-            </li>
-            <li>
-              <p>Mustache trim</p>
-              <p>from 200 uah</p>
-            </li>
-            <li>
-              <p>Straight razor shave</p>
-              <p>from 200 uah</p>
-            </li>
-          </ul>
+      <section class="services-container">
+        <h4 class="subtitle">Spend your time with the best masters</h4>
+        <h2 class="title">Services and prices</h2>
+        <div class="services-prices">
+          <div class="services-left-prices">
+            <ul class="unstyled-list">
+              <li class="services-item">
+                <p class="text">Men's haircut</p>
+                <p class="text">from 300 uah</p>
+              </li>
+              <li class="services-item">
+                <p class="text">Beard trim</p>
+                <p class="text">from 300 uah</p>
+              </li>
+              <li class="services-item">
+                <p class="text">Mustache trim</p>
+                <p class="text">from 200 uah</p>
+              </li>
+              <li class="services-item">
+                <p class="text">Straight razor shave</p>
+                <p class="text">from 200 uah</p>
+              </li>
+            </ul>
+          </div>
+          <div class="services-right-prices">
+            <ul class="unstyled-list">
+              <li class="services-item">
+                <p class="text">Trainee's haircut</p>
+                <p class="text">from 50 uah.</p>
+              </li>
+              <li class="services-item">
+                <p class="text">Haircut under the nozzle</p>
+                <p class="text">from 200 uah.</p>
+              </li>
+              <li class="services-item">
+                <p class="text">Children's haircut (0-12 y.o.)</p>
+                <p class="text">from 300 uah.</p>
+              </li>
+              <li class="services-item">
+                <p class="text">Camouflage of gray hair</p>
+                <p class="text">from 200 uah.</p>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div>
-          <ul class="unstyled-list">
-            <li>
-              <p>Trainee's haircut</p>
-              <p>from 50 uah.</p>
-            </li>
-            <li>
-              <p>Haircut under the nozzle</p>
-              <p>from 200 uah.</p>
-            </li>
-            <li>
-              <p>Children's haircut (0-12 y.o.)</p>
-              <p>from 300 uah.</p>
-            </li>
-            <li>
-              <p>Camouflage of gray hair</p>
-              <p>from 200 uah.</p>
-            </li>
-          </ul>
-        </div>
-        <button type="button">Online-booking</button>
+        <button class="button-nav" type="button">Online-booking</button>
       </section>
       <!-- Comercial section -->
-      <section>
-        <ul class="unstyled-list">
-          <li>
-            <div>
-              <h2>
-                600<sup><span>+</span></sup>
+      <section class="comercial-container">
+        <ul class="unstyled-list comercial-item1">
+          <li class="comercial-list-item">
+              <h2 class="title">
+                600<sup><span class="plus-item">+</span></sup>
               </h2>
-              <p>Satisfied customers per day</p>
-            </div>
+              <p class="text">Satisfied customers per day</p>
           </li>
-          <li>
-            <div>
-              <h2>
-                20<sup><span>+</span></sup>
+          <li class="comercial-list-item">
+              <h2 class="title">
+                20<sup><span class="plus-item">+</span></sup>
               </h2>
-              <p>Kyiv's best barbers</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <h2>
-                50<sup><span>+</span></sup>
-              </h2>
-              <p>Awards for excellent service</p>
-            </div>
-          </li>
-          <li>
-            <div>
-              <h2>
-                100<sup><span>+</span></sup>
-              </h2>
-              <p>Gifts for regular customers</p>
-            </div>
+              <p class="text">Kyiv's best barbers</p>
           </li>
         </ul>
-        <h4>Old traditional school</h4>
-        <h2>¿Why people come to us?</h2>
-        <p>
-          Only good things are said about us. But it's better to see and feel 1
-          time than read 10 times.
-        </p>
+        <ul class="unstyled-list comercial-item2">  
+          <li class="comercial-list-item">
+              <h2 class="title">
+                50<sup><span class="plus-item">+</span></sup>
+              </h2>
+              <p class="text">Awards for excellent service</p>
+          </li>
+          <li class="comercial-list-item">
+              <h2 class="title">
+                100<sup><span class="plus-item">+</span></sup>
+              </h2>
+              <p class="text">Gifts for regular customers</p>
+          </li>
+        </ul>
+        <div>
+          <h4 class="subtitle">Old traditional school</h4>
+          <h2 class="title">¿Why people come to us?</h2>
+          <p class="text">
+            Only good things are said about us. But it's better to see and feel 1
+            time than read 10 times.
+          </p>
+        </div>
       </section>
       <!-- Barbers section -->
       <section>
