--- a/index.html
+++ b/index.html
@@ -94,48 +94,50 @@
       </section>
       <!-- Services section -->
       <section class="services-container">
-        <h4 class="subtitle">Spend your time with the best masters</h4>
-        <h2 class="title">Services and prices</h2>
-        <div class="services-prices">
-          <div class="services-left-prices">
-            <ul class="unstyled-list">
-              <li class="services-item">
-                <p class="text">Men's haircut</p>
-                <p class="text">from 300 uah</p>
-              </li>
-              <li class="services-item">
-                <p class="text">Beard trim</p>
-                <p class="text">from 300 uah</p>
-              </li>
-              <li class="services-item">
-                <p class="text">Mustache trim</p>
-                <p class="text">from 200 uah</p>
-              </li>
-              <li class="services-item">
-                <p class="text">Straight razor shave</p>
-                <p class="text">from 200 uah</p>
-              </li>
-            </ul>
-          </div>
-          <div class="services-right-prices">
-            <ul class="unstyled-list">
-              <li class="services-item">
-                <p class="text">Trainee's haircut</p>
-                <p class="text">from 50 uah.</p>
-              </li>
-              <li class="services-item">
-                <p class="text">Haircut under the nozzle</p>
-                <p class="text">from 200 uah.</p>
-              </li>
-              <li class="services-item">
-                <p class="text">Children's haircut (0-12 y.o.)</p>
-                <p class="text">from 300 uah.</p>
-              </li>
-              <li class="services-item">
-                <p class="text">Camouflage of gray hair</p>
-                <p class="text">from 200 uah.</p>
-              </li>
-            </ul>
+        <div class="align-services">
+          <h4 class="subtitle">Spend your time with the best masters</h4>
+          <h2 class="title">Services and prices</h2>
+          <div class="services-prices">
+            <div class="services-left-prices">
+              <ul class="unstyled-list">
+                <li class="services-item">
+                  <p class="text">Men's haircut</p>
+                  <p class="text">from 300 uah</p>
+                </li>
+                <li class="services-item">
+                  <p class="text">Beard trim</p>
+                  <p class="text">from 300 uah</p>
+                </li>
+                <li class="services-item">
+                  <p class="text">Mustache trim</p>
+                  <p class="text">from 200 uah</p>
+                </li>
+                <li class="services-item">
+                  <p class="text">Straight razor shave</p>
+                  <p class="text">from 200 uah</p>
+                </li>
+              </ul>
+            </div>
+            <div class="services-right-prices">
+              <ul class="unstyled-list">
+                <li class="services-item">
+                  <p  class="text">Trainee's haircut</p>
+                  <p class="text">from 50 uah.</p>
+                </li>
+                <li class="services-item">
+                  <p class="text">Haircut under the nozzle</p>
+                  <p class="text">from 200 uah.</p>
+                </li>
+                <li class="services-item">
+                  <p class="text">Children's haircut (0-12 y.o.)</p>
+                  <p class="text">from 300 uah.</p>
+                </li>
+                <li class="services-item">
+                  <p class="text">Camouflage of gray hair</p>
+                  <p class="text">from 200 uah.</p>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <button class="button-nav" type="button">Online-booking</button>
@@ -181,9 +183,9 @@
       </section>
       <!-- Barbers section -->
       <section class="barbers-container">
-        <h4 class="subtitle">For true enjoyers of the atmosphere</h4>
-        <h2 class="title">Our barbers</h2>
-        <div>
+        <div class="barbers-align">
+          <h4 class="subtitle">For true enjoyers of the atmosphere</h4>
+          <h2 class="title">Our barbers</h2>
           <ul class="barbers-list">
             <li class="barbers-list-item">
               <img width="370" src="images/barbers/John.jpg" alt="John" />
@@ -204,37 +206,39 @@
         </div>
       </section>
       <section class="barbers-pictures-container">
-        <h4 class="subtitle">In Latin, "barba" means "beard"</h4>
-        <ul class="barbers-pictures-list unstyled-list">
-          <li>
-            <img
-              width="270"
-              src="images/work/work1.jpg"
-              alt="First work picture"
-            />
-          </li>
-          <li>
-            <img
-              width="270"
-              src="images/work/work2.jpg"
-              alt="Second work picture"
-            />
-          </li>
-          <li>
-            <img
-              width="270"
-              src="images/work/work3.jpg"
-              alt="Third work picture"
-            />
-          </li>
-          <li>
-            <img
-              width="270"
-              src="images/work/work4.jpg"
-              alt="Forth work picture"
-            />
-          </li>
-        </ul>
+        <div class="barbers-pictures-align">
+          <h4 class="subtitle">In Latin, "barba" means "beard"</h4>
+          <ul class="barbers-pictures-list unstyled-list">
+            <li class="align-list-item">
+              <img
+                width="270"
+                src="images/work/work1.jpg"
+                alt="First work picture"
+              />
+            </li>
+            <li class="align-list-item">
+              <img
+                width="270"
+                src="images/work/work2.jpg"
+                alt="Second work picture"
+              />
+            </li>
+            <li class="align-list-item">
+              <img
+                width="270"
+                src="images/work/work3.jpg"
+                alt="Third work picture"
+              />
+            </li>
+            <li class="align-list-item">
+              <img
+                width="270"
+                src="images/work/work4.jpg"
+                alt="Forth work picture"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Contacts -->
       <section class="contacts-container">
