--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
               <ul class="unstyled-list">
                 <li class="services-item">
                   <p class="text">Men's haircut</p>
+                  <svg class="services-line" width="262.86" height="5">
+                   <line x1="0" y1="2.5" x2="262.86" y2="2.5" stroke="#2a2a2a" stroke-width="1" />
+                  </svg>
                   <p class="text">from 300 uah</p>
                 </li>
                 <li class="services-item">
